[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azul-analysis-tool"
version = "0.1.0"
description = "Azul Solver & Analysis Toolkit - Python-based engine, web UI, and research tools"
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [
    {name = "Azul Solver Team"}
]
keywords = ["azul", "boardgame", "ai", "solver", "analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers", 
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "flask>=2.3.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
gui = [
    "tkinter",
]
neural = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.280",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]
all = [
    # GUI
    "tkinter",
    # Neural
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    # Dev
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.280",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]

[project.scripts]
azcli = "tools.cli:main"
azserver = "api.server:main"

[project.urls]
Homepage = "https://github.com/your-username/azul-analysis-tool"
Repository = "https://github.com/your-username/azul-analysis-tool.git"
Issues = "https://github.com/your-username/azul-analysis-tool/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "api*", "ui*", "neural*", "tools*"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "W", "C", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "C4", "ICN", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "ARG", "PTH", "ERA", "PGH", "PL", "TRY", "NPY", "PERF", "RUF"]
ignore = ["S101", "PLR0913", "PLR0912", "PLR0915", "C901"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true